--- a/styles/index/banner.css
+++ b/styles/index/banner.css
@@ -29,6 +29,12 @@
     background: url(../../img/mobile/Search.svg) no-repeat;
     background-position: 5%; 
 }
+.banner__search:focus::placeholder{
+    background: transparent;
+    padding-left: 0;
+    margin-right: 100%;
+    transition: 1.5s;
+}
 @media screen and (min-width: 1024px) {
     .banner__title{
         font-size: 2.25rem;
