--- a/styles/index/contact.css
+++ b/styles/index/contact.css
@@ -31,6 +31,12 @@
     background: url(../../img/mobile/Mail.svg) no-repeat;
     background-position: 1.2em; 
 }
+.contact__mail:focus::placeholder{
+    background: transparent;
+    padding-left: 0;
+    margin-right: 100%;
+    transition: 1s;
+}
 @media screen and (min-width: 1024px) {
     .contact{
         display: flex;
