--- a/styles/index/header.css
+++ b/styles/index/header.css
@@ -10,11 +10,23 @@
     padding: 1em;
     align-items: center;
 }
+
 .header__menu{
     width: 24px;
-    height: 24px;
     padding:1.5em;
     background-image: url(../../img/mobile/Menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+    position: relative;
+}
+
+.container__button:checked~.container__label{
+    background: var(--fade-1);
+    padding: 0.525em 0;
+}
+.container__button:checked~.container__label>.header__menu{
+    background: url(../../img/mobile/WhiteMenu.svg);
     background-repeat: no-repeat;
     background-position: center;
     display: inline-block;
@@ -27,7 +39,7 @@
 .list-menu{
     display: none;
     position: absolute;
-    top: 100%;
+    top: 85%;
     width: 65vw;
 }
 .container__button:checked~.list-menu{
@@ -38,6 +50,10 @@
     padding: 1em;
     background-color: var(--clr-11);
 }
+.list-menu__item:hover{
+    background: var(--fade-1);
+}
+
 .list-menu__title{
     color: var(--clr-14);
     font-weight: 700;
@@ -47,6 +63,9 @@
     text-decoration: none;
     text-transform: uppercase;
     background-color: transparent;
+}
+.list-menu__item:hover>.list-menu__link{
+    color: var(--clr-11);
 }
 .container__button{
     display: none;
@@ -58,6 +77,7 @@
     display: none;
 }
 .options{display: none;}
+
 @media screen and (min-width: 1024px){
     .header{
         justify-content: space-evenly;
@@ -75,6 +95,12 @@
     .options{
         display: flex;
     }
+    .list-menu__item:hover{
+        background: var(--fade-1);
+    }
+    .list-menu__item:hover a{
+        color: var(--clr-11);
+    }
     .options__item{
         padding: 1em;
         text-transform: uppercase;
@@ -88,6 +114,10 @@
     }
     .options__button:checked~.list-menu{
         display: block
+    }
+    .options__button:checked~.options__label>.options__item{
+        background: var(--fade-1);
+        color: var(--clr-11);
     }
     .list-menu{
         width: auto;
@@ -115,13 +145,5 @@
     .options{
         margin: 0 auto 0 2em;
     }
-    .list-menu__item:hover{
-        background: var(--fade-1);
-    }
-    .list-menu__item:hover a{
-        color: var(--clr-11);
-    }
-    .list-menu{
-        top: 70%;
-    }
+
 }
