--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,7 @@ body{
     font-size: 1rem;
     line-height: 1.5rem;
 }
+.click__active:active{
+    transform: scale(90%);
+    transition: 10ms;
+}
